--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "ai": "^2.2.36",
     "clsx": "^2.0.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.17",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.22.4"
   },
