--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "ai": "^2.2.36",
     "clsx": "^2.0.0",
+    "i18next": "^24.0.2",
     "lucide-react": "^0.438.0",
     "next": "^14.2.17",
+    "next-i18next": "^15.4.0",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.5.4",
