refactor(app): 替换 Google Tag Manager 为 Google Analytics
- 移除 GoogleTagManager 组件，使用 GoogleAnalytics 组件替代- 更新 package.json，添加 @next/third-parties 依赖
- 更新 pnpm-lock.yaml，添加 @next/third-parties 和 third-party-capital 依赖

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@next/third-parties": "^15.0.3",
     "ai": "^2.2.36",
     "clsx": "^2.0.0",
     "i18next": "^23.7.11",
